# agents

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/career_conversation/: app.py
1_foundations/career_conversation/me/: experiences.md  linkedin.md  summary.txt
1_foundations/me/: linkedin.md
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_Google_ADK.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: deep_research.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
2_openai/quiz_bot/: email_agent.py  grader_agent.py  main.py  models.py  planner_agent.py  quiz_agent.py  quiz_manager.py  quiz_writer.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/coder_sr/: README.md  pyproject.toml
3_crew/coder_sr/output/: code_and_output.txt
3_crew/coder_sr/src/coder_sr/: crew.py  main.py
3_crew/coder_sr/src/coder_sr/config/: agents.yaml  tasks.yaml
3_crew/debate_sr/: README.md  pyproject.toml
3_crew/debate_sr/output/: decide.md  oppose.md  propose.md
3_crew/debate_sr/src/debate_sr/: crew.py  main.py
3_crew/debate_sr/src/debate_sr/config/: agents.yaml  tasks.yaml
3_crew/engineering_team/: pyproject.toml
3_crew/engineering_team_sr/: README.md  pyproject.toml
3_crew/engineering_team_sr/output/: accounts.py  accounts.py_design.md  app.py
3_crew/engineering_team_sr/src/engineering_team_sr/: crew.py  main.py
3_crew/engineering_team_sr/src/engineering_team_sr/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher_sr/: README.md  pyproject.toml
3_crew/financial_researcher_sr/output/: report.md
3_crew/financial_researcher_sr/src/financial_researcher_sr/: crew.py  main.py
3_crew/financial_researcher_sr/src/financial_researcher_sr/config/: agents.yaml
3_crew/stock_picker_sr/: README.md  pyproject.toml
3_crew/stock_picker_sr/memory/: long_term_memory_storage.db
3_crew/stock_picker_sr/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_sr/src/stock_picker_sr/: crew.py  main.py
3_crew/stock_picker_sr/src/stock_picker_sr/config/: tasks.yaml
3_crew/stock_picker_sr/src/stock_picker_sr/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory.db-shm  memory.db-wal  sidekick_tools.py
4_langgraph/sandbox/: hotels.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  tickets.db
5_autogen/sandbox/: flights.md
