[project]
name = "debate_sr"
version = "0.1.0"
description = "debate-sr using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
debate_sr = "debate_sr.main:run"
run_crew = "debate_sr.main:run"
train = "debate_sr.main:train"
replay = "debate_sr.main:replay"
test = "debate_sr.main:test"
run_with_trigger = "debate_sr.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
