[project]
name = "engineering_team_sr"
version = "0.1.0"
description = "engineering_team_sr using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.5.0",
]

[project.scripts]
engineering_team_sr = "engineering_team_sr.main:run"
run_crew = "engineering_team_sr.main:run"
train = "engineering_team_sr.main:train"
replay = "engineering_team_sr.main:replay"
test = "engineering_team_sr.main:test"
run_with_trigger = "engineering_team_sr.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
