[project]
name = "financial_researcher_sr"
version = "0.1.0"
description = "financial_researcher_sr using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.5.0",
]

[project.scripts]
financial_researcher_sr = "financial_researcher_sr.main:run"
run_crew = "financial_researcher_sr.main:run"
train = "financial_researcher_sr.main:train"
replay = "financial_researcher_sr.main:replay"
test = "financial_researcher_sr.main:test"
run_with_trigger = "financial_researcher_sr.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
