[project]
name = "stock_picker_sr"
version = "0.1.0"
description = "stock_picker_sr using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
stock_picker_sr = "stock_picker_sr.main:run"
run_crew = "stock_picker_sr.main:run"
train = "stock_picker_sr.main:train"
replay = "stock_picker_sr.main:replay"
test = "stock_picker_sr.main:test"
run_with_trigger = "stock_picker_sr.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
